service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service
  labels:
    app: image-project
spec:
  selector:
    app: image-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
