service-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: image
spec:
  selector:
    owner: Vaibhav
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
